--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Wreck-it Ralph</title>
 	<link rel="icon" href="https://lumiere-a.akamaihd.net/v1/images/ralph-headretina_f6ef0c9b.jpeg?region=0,0,450,450">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/hero.css">
 </head>
 <body>
 	<!-- header element -->
@@ -16,9 +20,9 @@
 	<!-- main element -->
 	<main>
 		<h2>About Ralph</h2>
-		<p>Ralph is awesome! He's an 8-bit video game bad guy who travels to prove he's a good guy</p>
+		<p>Ralph is awesome! He's an 8-bit video game bad guy who travels the length of the arcade to prove he's a good guy.</p>
 		<img src="img/ralph-big.jpg">
-		<p>Ralph and his friends</p>
+		<p class="caption">Ralph and his friends</p>
 
 		<!-- Ralph's Characteristics -->
 		<h2>Ralph's Characteristics</h2>
